# PyKeyCloakJWT

./: .gitignore  README.md  pyproject.toml  requirements.txt
command/: call.sh  get-kc-jwt-token.sh  simple_curl.sh  simple_curl_sa.sh
docs/: Install_keycloak.md
keys/: id_rsa  id_rsa.pub
notebooks/: play_with_jwt.ipynb  play_with_keycloak.ipynb
src/: JWTTokenValidator.py  JwtTokenValidator.py  OidcClient.py  OidcTokenManager.py
tests/: test_JWTTokenValidator.py  test_OidcClient.py  test_OidcTokenManager.py  test_service_account.py
